# johanbrook.com

./: .editorconfig  .eleventy.js  .eleventyignore  .eslintrc  .git-blame-ignore-revs  .gitignore  .mastodon-notes  .stylelintrc  404.html  CLAUDE.md  CNAME  Makefile  README.md  _config.ts  _feeds.ts  _mastodon.ts  _syndicate.ts  admin.js  admin.js.map  api.json  build.coffee  build.js  config.ts  deno.json  deno.jsonc  deno.lock.bak  deploy  deps.ts  feed.xml  gulpfile.js  helpers.coffee  helpers.js  humans.txt  import_map.json  index.html  johan.css  johan.css.map  johan.sublime-project  meta.json  micro.json  (+20 more)
.well-known/: webfinger
.zed/: settings.json
1/: index.html
10/: index.html
11/: index.html
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
2/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
29/: index.html
3/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
about/: index.html
admin/: index.html
all/: index.html
api/: app.ts  auth.ts  config.ts  crypto.ts  date.ts  pipe.ts  problem.ts  router.ts  server.ts  yaml.ts
assets/: johanbrook-cv.sketch
changelog/: index.html
colophon/: index.html
frey/: Cargo.toml
frey/src/: build.rs  collection.rs  data.rs  date.rs  main.rs  page.rs  templating.rs
frey/src/eda/: compile.rs  engine.rs  mod.rs  parse.rs
(+1803 files in other folders)
