[package]
name = "frey"
version = "0.1.0"
edition = "2024"
description = "My personal static site generator"
authors = ["Johan Brook <johan@johanbrook.com>"]

[dependencies]
argh = "0.1.14"
markdown = "1.0.0-alpha.21"
owo-colors = "4.3.0"
rquickjs = { version = "0.11", features = ["bindgen"] }
fast-yaml-core = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = "0.2.22"
